Make file structure more stow friendly
After this update we can use something like `stow zsh` or `stow tmux`
instead of `stow .` to apply partial symlinking (it's usefull if we're
sharing dotfiles between macos and linux).

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,9 @@
 theme = catppuccin-mocha
 background = #11111B
-fullscreen
-macos-non-native-fullscreen = true
 font-size = 16
+gtk-titlebar = false
+window-decoration = none
+gtk-adwaita = false
+gtk-custom-css = ./custom.css
 window-padding-x = 0
 window-padding-y = 0
