--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,24 +33,18 @@ set-option -g prefix C-x
 bind C-x send-prefix
 
 # Windows
-bind -n S-Left previous-window
-bind -n S-Down choose-tree -Z
-bind -n S-Up choose-tree -Z -w
-bind -n S-Right next-window
+bind -n M-h previous-window
+bind -n M-j choose-tree -Z
+bind -n M-k  choose-tree -Z -w
+bind -n M-l next-window
 
 bind -r \> swap-window -t +1\; select-window -t +1
 bind -r \< swap-window -t -1\; select-window -t -1
 
-# Panes
-bind -r C-Left select-pane -L
-bind -r C-Down select-pane -D
-bind -r C-Up select-pane -U
-bind -r C-Right select-pane -R
-
-bind -r S-Left resize-pane -L 5
-bind -r S-Down resize-pane -D 5
-bind -r S-Up resize-pane -U 5
-bind -r S-Right resize-pane -R 5
+bind -n S-Left resize-pane -L 5
+bind -n S-Down resize-pane -D 5
+bind -n S-Up resize-pane -U 5
+bind -n S-Right resize-pane -R 5
 
 bind -r \} swap-pane -D
 bind -r \{ swap-pane -U
@@ -72,6 +66,7 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure Catppuccin
 set -g @catppuccin_flavor "macchiato"
