--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,6 @@
 theme = catppuccin-mocha
 background = #11111B
+cursor-invert-fg-bg = true
 font-size = 16
 gtk-titlebar = false
 window-decoration = none
