--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -8,3 +8,4 @@ gtk-adwaita = false
 gtk-custom-css = ./custom.css
 window-padding-x = 0
 window-padding-y = 0
+keybind = global:cmd+shift+grave_accent=toggle_quick_terminal
