--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure Catppuccin
-set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_status_background "none" # none == default
 set -g @catppuccin_pane_status_enabled "off"
 set -g @catppuccin_pane_border_status "off"
@@ -110,11 +110,11 @@ set -wg automatic-rename on
 set -g automatic-rename-format "Window"
 
 set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-style "fg=#{@thm_rosewater}"
+set -g window-status-style "fg=#{@thm_peach}"
 set -g window-status-last-style "fg=#{@thm_peach}"
 set -g window-status-activity-style "fg=#{@thm_red},bold"
 set -g window-status-bell-style "fg=#{@thm_red},bold"
 set -gF window-status-separator "#[fg=#{@thm_overlay_0}]"
 
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+set -g window-status-current-style "bg=#11111B,fg=#{@thm_rosewater}"
