Split config between arch and macos

--- a/arch-tmux/.tmux.conf
+++ b/arch-tmux/.tmux.conf
@@ -33,18 +33,19 @@ set-option -g prefix C-x
 bind C-x send-prefix
 
 # Windows
-bind -n M-h previous-window
-bind -n M-j choose-tree -Z
-bind -n M-k  choose-tree -Z -w
-bind -n M-l next-window
+bind -n S-Left previous-window
+bind -n S-Down choose-tree -Z
+bind -n S-Up choose-tree -Z -w
+bind -n S-Right next-window
 
 bind -r \> swap-window -t +1\; select-window -t +1
 bind -r \< swap-window -t -1\; select-window -t -1
 
-bind -n S-Left resize-pane -L 5
-bind -n S-Down resize-pane -D 5
-bind -n S-Up resize-pane -U 5
-bind -n S-Right resize-pane -R 5
+# Panes
+bind -r C-Left select-pane -L
+bind -r C-Down select-pane -D
+bind -r C-Up select-pane -U
+bind -r C-Right select-pane -R
 
 bind -r \} swap-pane -D
 bind -r \{ swap-pane -U
