--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,3 +4,7 @@ font-size = 16
 window-padding-x = 0
 window-padding-y = 0
 keybind = global:cmd+shift+grave_accent=toggle_quick_terminal
+gtk-titlebar = false
+window-decoration = none
+gtk-adwaita = false
+gtk-custom-css = ./custom.css
